Add fromJavaObject method